crates/rspyts-macros/tests/ui/generic_struct.rs
use rspyts::bridge;

#[bridge]
pub struct Wrapper<T> {
    pub value: T,
}

fn main() {}
